--- a/.github/workflows/cb.yml
+++ b/.github/workflows/cb.yml
@@ -3,11 +3,11 @@ on:
   workflow_dispatch
 
 jobs:
-  create-branch
+  create-branch:
     runs-on: ubuntu-latest
     steps:
       uses: peterjgrainger/action-create-branch@v2.0.1
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
-        branch: 'release-notes' 
+        branch: 'release-notes'
