--- a/.github/workflows/cb.yml
+++ b/.github/workflows/cb.yml
@@ -6,8 +6,8 @@ jobs:
   create-branch:
     runs-on: ubuntu-latest
     steps:
-      uses: peterjgrainger/action-create-branch@v2.0.1
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      with:
-        branch: 'release-notes'
+      - uses: peterjgrainger/action-create-branch@v2.0.1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          branch: 'release-notes'
