--- a/.github/workflows/cb.yml
+++ b/.github/workflows/cb.yml
@@ -1,6 +1,12 @@
 name: Create branch
 on:
-  workflow_dispatch
+  workflow_dispatch:
+    inputs:
+      branch:
+        description: 'branch'
+        default: 'main'
+        required: false
+        type: string
 
 jobs:
   create-branch:
