--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -1,6 +1,8 @@
-name: Run the Action on each commit
+name: Create PR
 on:
   workflow_dispatch
+
+
 jobs:
   action-pull-request:
     runs-on: ubuntu-latest
@@ -22,3 +24,5 @@ jobs:
           old_string: "**Write you description here**"
           new_string: ${{ github.event.commits[0].message }}
           get_diff: true
+          source_branch: "second_branch"
+          target_branch: "main"
