--- a/.github/workflows/cb.yml
+++ b/.github/workflows/cb.yml
@@ -7,6 +7,9 @@ on:
         default: 'main'
         required: false
         type: string
+      sha:
+        type: string
+        required: true
 
 jobs:
   create-branch:
@@ -16,4 +19,5 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          branch: 'release-notes'
+          branch: ${{ inputs.branch }}
+          sha: {{ inputs.sha }}
