--- a/.github/workflows/cb.yml
+++ b/.github/workflows/cb.yml
@@ -2,11 +2,11 @@ name: Create branch
 on:
   workflow_dispatch:
     inputs:
-      branch:
-        description: 'branch'
-        default: 'main'
-        required: false
-        type: string
+      - branch:
+         description: 'branch'
+         default: 'new_branch'
+         required: false
+         type: string
       sha:
         type: string
         required: true
