--- a/.github/workflows/cb.yml
+++ b/.github/workflows/cb.yml
@@ -2,14 +2,14 @@ name: Create branch
 on:
   workflow_dispatch:
     inputs:
-      - branch:
-          description: 'branch'
-          default: 'new_branch'
-          required: false
-          type: string
-        sha:
-          type: string
-          required: true
+      branch:
+        description: 'branch'
+        default: 'new_branch'
+        required: false
+        type: string
+      sha:
+        type: string
+        required: true
 
 jobs:
   create-branch:
