--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -7,7 +7,6 @@ on:
         type: string
         required: true
 
-
 jobs:
   action-pull-request:
     runs-on: ubuntu-latest
@@ -29,5 +28,5 @@ jobs:
           old_string: "**Write you description here**"
           new_string: ${{ github.event.commits[0].message }}
           get_diff: true
-          source_branch: ${{inputs.source}}
+          source_branch: "${{ inputs.source }}"
           target_branch: "main"
