--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -20,13 +20,12 @@ jobs:
         uses: devops-infra/action-pull-request@v0.4.2
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          # title: ${{ github.event.commits[0].message }}
-          title: "Title"
+          title: ${{ github.event.commits[0].message }}
           assignee: ${{ github.actor }}
           label: automatic,feature
           # template: .github/PULL_REQUEST_TEMPLATE/FEATURE.md
           old_string: "**Write you description here**"
           new_string: ${{ github.event.commits[0].message }}
           get_diff: true
-          source_branch: ${{ inputs.source }}
+          source_branch: ${{ github.event.inputs.source }}
           target_branch: "main"
